complete html framework

--- a/index.html
+++ b/index.html
@@ -39,27 +39,34 @@
         <img src="images/khabib.jpg" alt="khabib nurmagomedov after he beat conor mcgregor"
         width="200"
         height="200">
-        <p>khabib nurmagomedov after he beat conor mcgregor</p>
+        <p>Khabib Nurmagomedov after he beat Conor Mcgregor</p>
 
         <img src="images/ali.jpeg" alt="muhammad ali posing for a picture"
         width="200"
         height="200">
-        <p>muhammad ali posing for a picture</p>
+        <p>Muhammad Ali posing for a picture</p>
 
         <img src="images/oliveira.jpeg" alt="charles oliveira winning the ufc lightweight title"
         width="200"
         height="200">
-        <p>charles oliveira winning the ufc lightweight title</p>
+        <p>Charles Oliveira winning the ufc lightweight title</p>
 
         <img src="images/pereira.jpeg" alt="alex pereira in his fight against sean strickland"
         width="200"
         height="200">
-        <p>alex pereira in his fight against sean strickland</p>
+        <p>Alex Pereira in his fight against Sean Strickland</p>
 
 
     </div>
     <div class="quote">
-        <h2></h2>
+        <h2>"I am the greatest, I said that even before I knew I was"</h2>
+        <sub>-Muhammad ali</sub>
+    </div>
+
+    <div class="call">
+        <p>Press this cool button!!!</p>
+        <p>sign up for blah blah blah</p>
+        <button>press me</button>
     </div>
 
     
