--- a/index.html
+++ b/index.html
@@ -40,28 +40,29 @@
 
         <div class="content">
 
-            <h2> Top 4 </h2>
+            <h2 class="sub-title"> Top 4 </h2>
 
-            <img src="images/khabib.jpg" alt="khabib nurmagomedov after he beat conor mcgregor"
-            width="200"
-            height="200">
-            <p>Khabib Nurmagomedov</p>
+            <div class="images">
+                <img src="images/khabib.jpg" alt="khabib nurmagomedov after he beat conor mcgregor"
+                width="200"
+                height="200">
+                <p>Khabib Nurmagomedov</p>
 
-            <img src="images/ali.jpeg" alt="muhammad ali posing for a picture"
-            width="200"
-            height="200">
-            <p>Muhammad Ali</p>
+                <img src="images/ali.jpeg" alt="muhammad ali posing for a picture"
+                width="200"
+                height="200">
+                <p>Muhammad Ali</p>
 
-            <img src="images/oliveira.jpeg" alt="charles oliveira winning the ufc lightweight title"
-            width="200"
-            height="200">
-            <p>Charles Oliveira</p>
+                <img src="images/oliveira.jpeg" alt="charles oliveira winning the ufc lightweight title"
+                width="200"
+                height="200">
+                <p>Charles Oliveira</p>
 
-            <img src="images/pereira.jpeg" alt="alex pereira in his fight against sean strickland"
-            width="200"
-            height="200">
-            <p>Alex Pereira</p>
-
+                <img src="images/pereira.jpeg" alt="alex pereira in his fight against sean strickland"
+                width="200"
+                height="200">
+                <p>Alex Pereira</p>
+            </div>
 
         </div>
         <div class="quote">
